fix: updated Layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import "mvp.css/mvp.css";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Angel Baez">
   <header>
     <nav>
       <a href="/"><p>Angel Baez</p></a>
