fix: updated homepage content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,14 +8,17 @@ import Layout from "../layouts/Layout.astro";
     <nav>
       <a href="/"><p>Angel Baez</p></a>
     </nav>
-    <h1 class="text-gradient">Making the web a safer and greater place.</h1>
+    <h5><em>vitam impendere vero = to pay his life for the truth</em></h5>
+    <h1 class="text-gradient">Developer, entrepreneur and tacos connoisseur</h1>
     <p>
       If you're looking for a developer with an entrepreneurial spirit and
       life-long learning mindset, <mark>you're in the right place</mark>.
     </p>
     <br />
     <p>
-      <a href="mailto:a@baezor.io"><i>Let's talk!</i></a>
+      <a href="mailto:a@baezor.io"><i>Let's talk! ↗</i></a>
+      <a href="https://github.com/baezor" target="_blank"><b>Github ↗</b></a>
+      <a href="https://twitter.com/baezor" target="_blank"><i>Twitter ↗</i></a>
     </p>
   </header>
 
