--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "mvp.css/mvp.css";
 export interface Props {
   title: string;
 }
@@ -16,6 +17,29 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <header>
+      <nav>
+        <a href="/"><p>Angel Baez</p></a>
+        <ul>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/baezor/" target="_blank"
+              >LinkedIn ↗</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <slot />
+    </main>
+    <footer>
+      <hr />
+      <p>
+        <small>Angel Baez |</small>
+        <small>&copy; 2022</small>
+      </p>
+    </footer>
   </body>
 </html>
