--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Form from "../components/Form.astro";
 ---
 
 <Layout title="Angel Baez - Contact">
@@ -10,4 +11,5 @@ import Layout from "../layouts/Layout.astro";
       >Twitter ↗</a
     > and <a href="https://github.com/baezor" target="_blank">Github ↗</a>
   </p>
+  <Form />
 </Layout>
